--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
+Images/Images.xcworkspace/
+Images.xcworkspace/
+*.xcworkspace/
+Images/.DS_Store
+
 ## Build generated
 build/
 DerivedData/
@@ -105,6 +110,3 @@ build/
 # AppCode
 .idea/
 *.xccheckout
-Images/Images.xcworkspace/
-Images.xcworkspace/
-Images/.DS_Store
