--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,12 @@
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
-Images/.DS_Stodre
+xcuserdata/
 
-## Build generated
-build/
-DerivedData/
+Images/.DS_Store
+Pods/
+Podfile.lock
+*.xcworkspace/xcuserdata/okolomiets.xcuserdatad/
 
 ## Various settings
 *.pbxuser
@@ -20,96 +21,14 @@ DerivedData/
 xcuserdata/
 
 ## Other
-
 *.moved-aside
 *.xccheckout
 *.xcscmblueprint
 !xcshareddata
 
-## Obj-C/Swift specific
-*.hmap
-*.ipa
-*.dSYM.zip
-*.dSYM
 
-## Playgrounds
-timeline.xctimeline
-playground.xcworkspace
-
-# Swift Package Manager
-#
-# Add this line if you want to avoid checking in source code from Swift Package Manager dependencies.
-# Packages/
-# Package.pins
-.build/
-
-# CocoaPods
-#
-# We recommend against adding the Pods directory to your .gitignore. However
-# you should judge for yourself, the pros and cons are mentioned at:
-# https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
-Pods/
-Podfile.lock
-
-
-# Carthage
-#
-# Add this line if you want to avoid checking in source code from Carthage dependencies.
-# Carthage/Checkouts
-
-Carthage/Build
-
-# fastlane
-#
-# It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
-# screenshots whenever they are needed.
-# For more information about the recommended setup visit:
-# https://docs.fastlane.tools/best-practices/source-control/#source-control
-
-fastlane/report.xml
-fastlane/Preview.html
-fastlane/screenshots
-fastlane/test_output
 
 .DS_Store
 .AppleDouble
 .LSOverride
 
-
-# Thumbnails
-._*
-# Files that might appear on external disk
-.Spotlight-V100
-.Trashes
-.xcuserdata
-*.xcscheme
-*.xcsettings
-*.xcuserstate
-# OS X Finder
-# Xcode per-user config
-*.mode1
-*.mode1v3
-*.mode2v3
-*.perspective
-*.perspectivev3
-*.pbxuser
-xcuserdata
-# Build products
-build/
-*.o
-*.LinkFileList
-*.hmap
-# Automatic backup files
-*~.nib/
-*.swp
-*~
-*.dat
-*.dep
-# AppCode
-.idea/
-*.xccheckout
-
-
-xcuserdata
-xcuserdata/**/*
-!xcuserdata/**/xcschemes/*
